# stroop_llm

./: .coverage  .gitignore  README.md  chat.py  experiment.py  llava.py  pyproject.toml  requirements.txt
results/: stroop_experiment_results_1.csv  stroop_experiment_results_2.csv  stroop_experiment_results_3.csv
src/: __init__.py  analyze_results.py  api_handler.py  base_api_handler.py  cli.py  clip.py  clip_analysis.ipynb  config.py  experiment.py  image_handler.py  mock_api_handler.py  result_analysis.ipynb  stimulus_generator.py  test_experiment.py  trial_manager.py  utils.py
src/clip/: analyze_results.py  clip.py  clip_analysis.ipynb  clip_analysis_improved.py
src/gpt4_matrix/: multiple_words.py
src/gpt4_single/: base_api_handler.py  experiment.py  image_handler.py
src/mutliword/: experiment_config.py  meta_experiment.py  multiword_analysis.py  multiword_experiment.py  multiword_stimulus.py  test_multiword_experiment.py
src/single/: api_handler.py  cli.py  result_analysis.ipynb  sequence_alignment.py  stroop_analysis.py  trial_manager.py
tests/: conftest.py  test_huggingface_api.py  test_openai.py  test_single_stimulus.py
tests/integration/: test_experiment_flow.py
tests/unit/: test_experiment.py  test_stimulus_generator.py
