[tool.poetry]
name = "stroop-llm"
version = "0.1.0"
description = "A Stroop effect experiment using LLMs"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
openai = "^1.0.0"
pillow = "^10.0.0"
pandas = "^2.0.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
jupyter = "^1.0.0"
numpy = "^1.24.0"
torch = "^2.0.0"
transformers = "^4.30.0"
requests = "^2.32.3"
plotly = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing"
pythonpath = ["src"]
